# PharmaCrawler

./: Readme.md  pyproject.toml
pubmed_pharma_fetcher/: __init__.py  cli.py
pubmed_pharma_fetcher/config/: companies.json
pubmed_pharma_fetcher/core/: __init__.py  affiliation_parser.py  data_processor.py  pubmed_client.py
pubmed_pharma_fetcher/utils/: __init__.py  validators.py
